@@ -2,6 +2,7 @@
 <!-- $Id$ -->
 <metal:block define-macro="default_edit"
   tal:define="layout options/layout;
+              layout_id layout/layout_id;
               ds options/datastructure;
               dm ds/getDataModel;
               creation creation|nothing;
@@ -80,17 +81,17 @@
           <div style="float: right;" tal:condition="is_flexible">
             <input type="button" value="button_move_up"
               tal:condition="not:repeat/row/start"
-              tal:attributes="name string:uprow_${repeat/row/index};
+              tal:attributes="name string:uprow_${repeat/row/index}__${layout_id};
                               onclick python:'CPSFlexibleEdit.buttonClick(this, \'\')'"
               class="context moveUp" i18n:attributes="value" />
             <input type="button" value="button_move_down"
               tal:condition="not:repeat/row/end"
-              tal:attributes="name string:downrow_${repeat/row/index};
+              tal:attributes="name string:downrow_${repeat/row/index}__${layout_id};
                               onclick python:'CPSFlexibleEdit.buttonClick(this, \'\')'"
               class="context moveDown" i18n:attributes="value" />
             <input type="button" value="button_delete"
               class="destructive" i18n:attributes="value"
-              tal:attributes="name string:deleterow_${repeat/row/index};
+              tal:attributes="name string:deleterow_${repeat/row/index}__${layout_id};
                               onclick python:'CPSFlexibleEdit.buttonClick(this, \'%s\')' %
                                 (cpsmcat('description_confirm_delete'), )" />
           </div>
@@ -102,10 +103,8 @@
 
 <tal:block condition="is_flexible">
 <div tal:define="flexible_widgets options/flexible_widgets">
-  <input type="hidden" name="layout_id" value="."
-    tal:attributes="value layout/layout_id" />
   <tal:select condition="python:len(flexible_widgets)>1">
-    <select name="widget_type">
+    <select tal:attributes="name string:widget_type__${layout_id}">
       <tal:block repeat="widget options/flexible_widgets">
       <option value="."
         tal:condition="widget/is_i18n"
@@ -118,21 +117,24 @@
         tal:content="widget/title_or_id">Type</option>
       </tal:block>
     </select>
-    <input type="button" id="addwidget_button"
-           name="addwidget_button" value="button_add"
-           class="context"
+    <input type="button"
+           value="button_add" id="addwidget_button"
+           class="context" 
            i18n:attributes="value"
-           tal:attributes="onclick python:'CPSFlexibleEdit.buttonClick(this, \'\')'" />
+           tal:attributes="onclick string:CPSFlexibleEdit.buttonClick(this, '');
+                           name string:addwidget_button__${layout_id};" />
   </tal:select>
   <tal:button condition="python:len(flexible_widgets) == 1">
     <tal:block define="widget python:flexible_widgets[0]">
-      <input type="hidden" name="widget_type"
-        tal:attributes="value widget/getWidgetId">
-      <input type="submit" name="addwidget_button"
-        id="addwidget_button"
+      <input type="hidden"
+        tal:attributes="value widget/getWidgetId;
+                        name string:widget_type__${layout_id};">
+      <input type="submit" id="addwidget_button"
         tal:define="button_add python:cpsmcat('button_add');
           widget_title python:cpsmcat(widget.title_or_id())"
-        tal:attributes="value string:${button_add} ${widget_title}"
+          tal:attributes="onclick string:CPSFlexibleEdit.buttonClick(this, '');
+                          value string:${button_add} ${widget_title};
+                          name string:addwidget_button__${layout_id};"
         class="context" />
     </tal:block>
   </tal:button>
